refactor(Ball): 존재 여부 확인 시 검색 속도를 높이기 위해 Map 으로 변경